--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Resume</title>
   </head>
   <body>
+    
     <footer>
+      
     <h1 style="text-align: center">Resume</h1>
-</footer>
+<ul>
+        <li><a href="/form.html">Fo rm</a></li>
+      </ul>
+    </nav>
+    </footer>
     <hr />
     <main>
         <section>
